# feast-workshop

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: feast_apply.yml  feast_apply_aws.yml  feast_apply_gcp.yml  feast_plan.yml  feast_plan_aws.yml  feast_plan_gcp.yml
client_dir/: feature_store.yaml  test_python.py
feature_repo/: feature_services.py  feature_store.yaml  features.py  module_1.ipynb  workshop.ipynb
module_0/: README.md  explore_data.ipynb
module_0/client/: feature_store.yaml  test_fetch.py
module_0/client_aws/: feature_store.yaml  test_fetch.py
module_0/client_no_yaml/: test_fetch.py  test_fetch_aws.py  test_fetch_gcp.py
module_0/feature_repo_aws/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  features.py
module_0/feature_repo_gcp/: data_sources.py  feature_services.py  feature_store.yaml  features.py
module_0/infra/: main.tf  outputs.tf  (+1 more)
module_1/: README.md  docker-compose.yml  explore_data.ipynb
module_2/: README.md  explore_data.ipynb
module_3/: README.md  docker-compose.yml
module_3_db/: README.md  sample_db_notebook.ipynb
module_3_sf/: README.md
module_4_rag/: Dockerfile  README.md  app.py  batch_score_documents.py  docker-compose.yml  generate_random_questions.py  module_4.ipynb  pull_states.py  pyproject.toml  run.py
module_4_rag/feature_repo/: entities.py  feature_store.yaml  features.py  module_1.ipynb  module_4.ipynb
module_4_rag/feature_repo/data/: city_wikipedia_summaries.csv  city_wikipedia_summaries_with_embeddings.parquet
module_5_compute_engine/: README.md  compute_example.ipynb  pyproject.toml
module_5_compute_engine/feature_repo/: data_sources.py  entities.py  feature_services.py  feature_store.yaml  features.py
(+57 files in other folders)
