[tool.poetry]
name = "feast-workshop"
version = "0.1.0"
description = "A workshop with several modules to help learn Feast, an open-source feature store"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
cryptography = "^37.0.2"
protobuf = "3.17"
feast = {extras = ["aws"], version = "^0.21.2"}
jupyter = "^1.0.0"
notebook = "^6.4.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
